--- a/resume/templates/index.html
+++ b/resume/templates/index.html
@@ -18,18 +18,16 @@
       rel="stylesheet"
       type="text/css"
     />
-
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+      crossorigin="anonymous"
+    />
   </head>
   <body id="top">
-    <div id="cv" class="instaFade">
+    <div id="cv">
       <div class="mainDetails">
-        <div id="headshot" class="quickFade">
-          <img src="{% static 'images/headshot.jpeg' %}" alt="Tosin Ayodele" />
-        </div>
-
         <div id="name">
           <h1>Tosin Ayodele</h1>
           <h2>Backend Engineer</h2>
@@ -94,10 +92,9 @@
               <h2>Software Engineer Intern at DevsCareer</h2>
               <p class="subDetails">May 2020 - August 2020</p>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                ultricies massa et erat luctus hendrerit. Curabitur non
-                consequat enim. Vestibulum bibendum mattis dignissim. Proin id
-                sapien quis libero interdum porttitor.
+                Collaborated with the team to develop landing page for a modern
+                cryptocurrency solution. Implemented a web application that
+                allows users to create, edit, and delete their own blog posts
               </p>
             </article>
 
@@ -105,10 +102,9 @@
               <h2>IT Support Staff at PANAF Schools, Kaduna</h2>
               <p class="subDetails">July 2019 - August 2020</p>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                ultricies massa et erat luctus hendrerit. Curabitur non
-                consequat enim. Vestibulum bibendum mattis dignissim. Proin id
-                sapien quis libero interdum porttitor.
+                Support and maintain the school's network and infrastructure.
+                Provide technical support to the school's staff and students.
+                Organized and managed media team for school's events.
               </p>
             </article>
           </div>
@@ -151,23 +147,84 @@
           </div>
           <div class="clear"></div>
         </section>
+
+        <section>
+          <div class="sectionTitle">
+            <h1>Contact</h1>
+          </div>
+
+          <div class="sectionContent">
+            <article>
+              <form method="POST" action="{% url 'contact' %}">
+                {% csrf_token %}
+                <div class="form-group">
+                  <div class="form-control">
+                    <label for="name">Name</label><br />
+                    <input
+                      name="name"
+                      type="text"
+                      id="name"
+                      required
+                      placeholder="John Doe"
+                    />
+                  </div>
+                  <div class="form-control">
+                    <label for="name">Email</label><br />
+                    <input
+                      name="email"
+                      type="email"
+                      id="email"
+                      required
+                      placeholder="johndoe@email.com"
+                    />
+                  </div>
+                  <div class="form-control">
+                    <label for="name">Subject</label><br />
+                    <input
+                      name="subject"
+                      type="text"
+                      id="subject"
+                      required
+                      placeholder="Let's talk"
+                    />
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="form-control">
+                    <label for="message">Message</label><br />
+                    <textarea id="message" name="message" required></textarea>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="form-control">
+                    <button type="submit" name="submit">Send</button>
+                  </div>
+                </div>
+              </form>
+            </article>
+          </div>
+          <div class="clear"></div>
+        </section>
       </div>
     </div>
-    <script type="text/javascript">
-      var gaJsHost =
-        "https:" == document.location.protocol ? "https://ssl." : "http://www.";
-      document.write(
-        unescape(
-          "%3Cscript src='" +
-            gaJsHost +
-            "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"
-        )
-      );
-    </script>
-    <script type="text/javascript">
-      var pageTracker = _gat._getTracker("UA-3753241-1");
-      pageTracker._initData();
-      pageTracker._trackPageview();
-    </script>
+    <div class="footer">
+      <ul>
+        <li>
+          <a href="https://www.twitter.com/tosxndc" target="_blank"
+            ><i class="fab fa-twitter fa-lg"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/tosxndc/" target="_blank"
+            ><i class="fab fa-linkedin fa-lg"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://github.com/devtosxn" target="_blank"
+            ><i class="fab fa-github fa-lg"></i
+          ></a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
