--- a/resume/templates/index.html
+++ b/resume/templates/index.html
@@ -43,7 +43,7 @@
               >
             </li>
             <li>
-              Website: <a href="http://www.google.com">http://www.google.com</a>
+              Website: <a href="https://devtosxn-resume-task.herokuapp.com/">https://devtosxn-resume-task.herokuapp.com/</a>
             </li>
             <li>Mobile: +2348178135068</li>
           </ul>
@@ -55,7 +55,7 @@
         <section>
           <article>
             <div class="sectionTitle">
-              <h1>Personal Profile</h1>
+              <h1>Professional Summary</h1>
             </div>
 
             <div class="sectionContent">
@@ -79,13 +79,15 @@
 
           <div class="sectionContent">
             <article>
-              <h2>Software Engineer</h2>
-              <p class="subDetails">April 2011 - Present</p>
+              <h2>Software Engineer Intern at Decagon</h2>
+              <p class="subDetails">Feb 2021 - Present</p>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                ultricies massa et erat luctus hendrerit. Curabitur non
-                consequat enim. Vestibulum bibendum mattis dignissim. Proin id
-                sapien quis libero interdum porttitor.
+               ●  Built consumable REST APIs with business logic embedded in the implementation together with a team for the frontend client of an e-learning platform
+               <br/> ●  Built reusable components using React and CSS-in-JS for the client side of the e-learning platform while consuming REST APIs built on the backend and composed relevant components together to implement business requirements <br/>
+              ●   Handled Database Management System with SQL like MySQL, Postgres, or NoSQL databases like MongoDB. </br>
+            ●   Experience with writing unit and integration test. <br/>
+            ●   Exposure to Agile methodologies. <br/>
+            ●   Exposure to working in remote conditions. <br/>
               </p>
             </article>
 
@@ -93,8 +95,8 @@
               <h2>Software Engineer Intern at DevsCareer</h2>
               <p class="subDetails">May 2020 - August 2020</p>
               <p>
-                Collaborated with the team to develop landing page for a modern
-                cryptocurrency solution. Implemented a web application that
+                ●   Collaborated with the team to develop landing page for a modern
+                cryptocurrency solution. <br/> ●  Implemented a web application that
                 allows users to create, edit, and delete their own blog posts
               </p>
             </article>
@@ -103,9 +105,9 @@
               <h2>IT Support Staff at PANAF Schools, Kaduna</h2>
               <p class="subDetails">July 2019 - August 2020</p>
               <p>
-                Support and maintain the school's network and infrastructure.
-                Provide technical support to the school's staff and students.
-                Organized and managed media team for school's events.
+                ●   Supported and maintained the school's network and infrastructure.<br/>
+                ●   Provided technical support to the school's staff and students. </br>
+                ●   Organized and managed media team for school's events.
               </p>
             </article>
           </div>
@@ -201,54 +203,7 @@
                   </fieldset>
                 </form>
               </div>
-              {% comment %}
-              <form method="POST" action="{% url 'contact' %}">
-                {% csrf_token %}
-                <div class="form-group">
-                  <div class="form-control">
-                    <label for="name">Name</label><br />
-                    <input
-                      name="name"
-                      type="text"
-                      id="name"
-                      required
-                      placeholder="John Doe"
-                    />
-                  </div>
-                  <div class="form-control">
-                    <label for="name">Email</label><br />
-                    <input
-                      name="email"
-                      type="email"
-                      id="email"
-                      required
-                      placeholder="johndoe@email.com"
-                    />
-                  </div>
-                  <div class="form-control">
-                    <label for="name">Subject</label><br />
-                    <input
-                      name="subject"
-                      type="text"
-                      id="subject"
-                      required
-                      placeholder="Let's talk"
-                    />
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="form-control">
-                    <label for="message">Message</label><br />
-                    <textarea id="message" name="message" required></textarea>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="form-control">
-                    <button type="submit" name="submit">Send</button>
-                  </div>
-                </div>
-              </form>
-              {% endcomment %}
+              
             </article>
           </div>
           <div class="clear"></div>
