--- a/static/css/form.css
+++ b/static/css/form.css
@@ -1,14 +1,5 @@
-.container {
-  max-width: 400px;
-  width: 100%;
-  margin: 0 auto;
-  position: relative;
-}
-
 #contact input[type="text"],
 #contact input[type="email"],
-#contact input[type="tel"],
-#contact input[type="url"],
 #contact textarea,
 #contact button[type="submit"] {
   font: 400 12px/16px "Lato", Helvetica, Arial, sans-serif;
@@ -17,7 +8,7 @@
 #contact {
   background: #f9f9f9;
   padding: 50px;
-  margin: 150px 0;
+  /* margin: 150px 0; */
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
