add hng logo and refactor styles

--- a/resume/templates/index.html
+++ b/resume/templates/index.html
@@ -227,6 +227,9 @@
             ><i class="fab fa-github fa-lg"></i
           ></a>
         </li>
+        <li>
+          <a href="https://zuri.team" target="_blank"><img id="hng"src="{% static 'images/hng-logo.jpeg' %}" alt="Zuri" /></a>
+        </li>
       </ul>
     </div>
   </body>
